<resources>
    <string name="app_name">crave</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Crave</string>
    <string name="nav_header_subtitle">Family Restaurant</string>
    <string name="nav_header_subtitle1">www.crave.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_follow">Follow Us</string>

    <string name="menu_drinks">Drinks</string>
    <string name="menu_salad">Salad</string>
    <string name="menu_maindish">Main Dish</string>
    <string name="menu_deserts">Deserts</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">246910243033823</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_caramel1">Caramel1</string>

</resources>
