<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.rys5477.crave.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="edu.rys5477.crave.ui.countact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_follow"
        android:name="edu.rys5477.crave.ui.follow.FollowFragment"
        android:label="@string/menu_follow"
        tools:layout="@layout/fragment_follow" />


    <fragment
        android:id="@+id/nav_deserts"
        android:name="edu.rys5477.crave.ui.deserts.DesertsFragment"
        android:label="@string/menu_deserts"
        tools:layout="@layout/fragment_deserts" />



    <fragment
        android:id="@+id/nav_drinks"
        android:name="edu.rys5477.crave.ui.drinks.DrinksFragment"
        android:label="@string/menu_drinks"
        tools:layout="@layout/fragment_drinks" />




    <fragment
        android:id="@+id/nav_salad"
        android:name="edu.rys5477.crave.ui.salad.SaladFragment"
        android:label="@string/menu_salad"
        tools:layout="@layout/fragment_salad" />



    <fragment
        android:id="@+id/nav_maindish"
        android:name="edu.rys5477.crave.ui.maindish.MaindishFragment"
        android:label="@string/menu_maindish"
        tools:layout="@layout/fragment_maindish" />




</navigation>